# BigNum

./: .gitignore  CMakeLists.txt  CMakeLists.txt.rapidcheck  LICENSE  README.md  main.cpp
src/: BigNum.cpp  BigNum.h  BigNum_impl.h  CMakeLists.txt
test/: AdditionTests.cpp  BigNumTests.cpp  CMakeLists.txt  DivisionTests.cpp  MultiplicationTests.cpp  SubstractionTests.cpp  main.cpp
